# 2WF90

./: Context.py  Integer.py  Multiplication.py  README.md  __init__.py  addition.py  addition_modulo.py  algorithm2.py  algorithms.py  algorithmsCombined.py  entry.py  field.py  input.txt  main.py  output.txt  poly.py  pyproject.toml  reduction.py  subtractionalgo.py  util.py
Assignment 1/src/: Context.py  __init__.py
Assignment 1/src/unused/: Multiplication.py  simple_division.py
Assignment 2/: example.txt  field.py  fields.py  input.txt  out.txt  output.txt  parse.py  poly.py  polynomials.py  test.txt
src/: Integer.py  algorithmsCombined.py
src/unused/: subtract_modulo.py
