[tool.poetry]
name = "2WF90-assignment"
version = "1.0.0"
description = "Our attempt at the first software assignment."

# license = "MIT"

authors = [
    "J.M.A Ottens <j.m.a.ottens@student.tue.nl>",
    "Veselina",
    "Milan",
    "Samar"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/sdispater/poetry"
#homepage = "https://github.com/sdispater/poetry"

#keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.2"  # Compatible python versions must be declared here
toml = "^0.9"
# Dependencies with extras
#requests = { version = "^2.13", extras = [ "security" ] }
# Python specific dependencies with prereleases allowed
#pathlib2 = { version = "^2.2", python = "~2.7", allows-prereleases = true }
# Git dependencies
#cleo = { git = "https://github.com/sdispater/cleo.git", branch = "master" }

# Optional dependencies (extras)
#pendulum = { version = "^1.4", optional = true }

[tool.poetry.dev-dependencies]
#pytest = "^3.0"
#pytest-cov = "^2.4"

[tool.poetry.scripts]
my-script = 'entry:main'
